--- a/template/MDK-ARM/template.uvprojx
+++ b/template/MDK-ARM/template.uvprojx
@@ -335,7 +335,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F427xx</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\..\src\adc_data;..\..\src\dichotomous_search;..\..\src\get_real_temp_value</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\..\src\adc_data;..\..\src\dichotomous_search;..\..\src\get_real_temp_value;..\..\src\ntc_table</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -530,14 +530,19 @@
               <FilePath>..\..\src\adc_data\adc_data.c</FilePath>
             </File>
             <File>
+              <FileName>get_real_temp_value.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\src\get_real_temp_value\get_real_temp_value.c</FilePath>
+            </File>
+            <File>
               <FileName>Dichotomous_search.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\src\dichotomous_search\Dichotomous_search.c</FilePath>
             </File>
             <File>
-              <FileName>get_real_temp_value.c</FileName>
+              <FileName>ntc_table.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\src\get_real_temp_value\get_real_temp_value.c</FilePath>
+              <FilePath>..\..\src\ntc_table\ntc_table.c</FilePath>
             </File>
           </Files>
         </Group>
